--- a/src/app/partners/partners.component.html
+++ b/src/app/partners/partners.component.html
@@ -8,6 +8,6 @@
   </p>
 
   <div style="font-weight: bold;">
-    prednaskovy-maraton@gmail.com
+    prednaskovy.maraton@gmail.com
   </div>
 </div>
