--- a/src/app/rules/rules.component.html
+++ b/src/app/rules/rules.component.html
@@ -15,6 +15,9 @@
         organizátoři.
       </li>
       <li>Každý z účastníků je povinen nahlásit případné porušení těchto pravidel.</li>
+      <li>Účastník akce se účastní na vlastní odpovědnost. Organizátoři nezodpovídají za jeho chování a případné
+        škody.
+      </li>
     </ol>
 
     <p>Porušení některého nebo více pravidel, bude trestáno nejdříve varováním, poté odebráním přístupu do budovy (v
