--- a/src/app/talks/talks.component.html
+++ b/src/app/talks/talks.component.html
@@ -1,7 +1,7 @@
 <div *ngIf="true">
   Pracujeme na tom
 </div>
-<div *ngIf="false">
+<div>
   <h1>Přednášky</h1>
   <div *ngFor="let talk of talks | async">
     <h2>{{talk.name}}</h2>
