--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -13,12 +13,12 @@
       <a class="navbar-brand" routerLink="/rules">Pravidla akce</a>
     </div>
     <div [class.collapse]="window.innerWidth < 768">
-      <ul class="nav navbar-nav navbar-right" *ngIf="isLoggedIn$ | async">
+      <ul class="nav navbar-nav navbar-right" *ngIf="authService.userData | async">
         <li class="loggedUser">
-          <a routerLink="/profile">{{displayName}}</a></li>
+          <a routerLink="/profile">{{user.email}}</a></li>
         <li><button class="btn btn-link navbar-btn" (click)="logOut()">Log Out</button></li>
       </ul>
-      <ul class="nav navbar-nav navbar-right" *ngIf="!(isLoggedIn$ | async)">
+      <ul class="nav navbar-nav navbar-right" *ngIf="!(authService.userData | async)">
         <li><button routerLink="/sign-up" class="btn btn-default navbar-btn">Registrovat se</button></li>
         <li>
           <button class="btn btn-link navbar-btn" (click)="openSignInDialog()">Přihlásit se</button>
