--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,33 +1,30 @@
-<div class="userContainer" *ngIf="currentUser">
+<div class="userContainer" *ngIf="user">
+  <p *ngIf="!hasAllObligatoryFields()">
+    Vyplňte prosím všechna povinná pole.
+  </p>
+
+  <strong *ngIf="user && user.isRegistered === false">
+    Vaše registrace je zrušena. Obnovíte ji kliknutím na tlačítko Zaregistrovat se.
+  </strong>
+
+  <strong *ngIf="savedNotice">
+    Vaše změny byly úspěšně uloženy.
+  </strong>
+
   <form [formGroup]="profileForm">
     <h1>Profil uživatele</h1>
     <div class="row">
-      <div class="col-md-4">
-        Jméno:
-      </div>
-      <div class="col-md-8">
-        <p *ngIf="!isEditing">{{currentUser.displayName}}</p>
-        <mat-form-field *ngIf="isEditing">
-          <input matInput type="text" id="name" class="input" placeholder="Vyplňte jméo" formControlName="displayName">
+      <div class="col-md-12">
+        <mat-form-field>
+          <input matInput type="text" id="name" class="input" placeholder="Nick nebo jméno*" formControlName="name">
         </mat-form-field>
       </div>
     </div>
     <div class="row">
-      <div class="col-md-4">
-        Email:
-      </div>
-      <div class="col-md-8">
-        <p>
-          {{currentUser.email}}
-        </p>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-md-4">
-        Potvrzená rezervace:
-      </div>
-      <div class="col-md-8">
-        ANO
+      <div class="col-md-12">
+        <mat-form-field>
+          <input matInput type="text" id="email" class="input" placeholder="email" formControlName="email">
+        </mat-form-field>
       </div>
     </div>
     <div class="row">
@@ -35,25 +32,14 @@
         Stravování:
       </div>
       <div class="col-md-8">
-        <div *ngIf="!isEditing">
-          <p *ngIf="currentUser.lunch">ANO</p>
-          <p *ngIf="!currentUser.lunch">NE</p>
-        </div>
-        <div *ngIf="isEditing">
-          <p *ngIf="currentUser.lunch">ANO</p>
-          <p *ngIf="!currentUser.lunch">NE</p>
-        </div>
-        <div *ngIf="false">
-          Dodělat obědy!
-          <!--<input matInput type="email" id="email" class="input" placeholder="Email" formControlName="email">-->
-          <!--<input matInput type="checkbox" id="lunch" formControlName="lunch">-->
-          <mat-checkbox formControlName="lunch">Chci využít statravování na akci</mat-checkbox>
-        </div>
+        <input type="checkbox" name="lunch" formControlName="lunch">
       </div>
     </div>
     <div class="row">
-      <button mat-raised-button *ngIf="isEditing" (click)="save()">Uložit změny</button>
-      <button mat-raised-button *ngIf="!isEditing" (click)="isEditing = true">Upravit profil</button>
+      <button mat-raised-button *ngIf="user && user.isRegistered" (click)="save()">Uložit změny</button>
+      <button mat-raised-button *ngIf="user && user.isRegistered" (click)="cancelRegistration()">Zruš registraci
+      </button>
+      <button mat-raised-button *ngIf="user && !user.isRegistered" (click)="save()">Zaregistrovat se</button>
     </div>
   </form>
 </div>
