--- a/src/app/sign-in/sign-in.component.html
+++ b/src/app/sign-in/sign-in.component.html
@@ -11,9 +11,9 @@
     <i class="fa fa-google-plus fa-lg"></i> Přihlásit se přes účet Google
   </button>
 
-  <button (click)="signInWithFacebook()" class="button btn-social btn-facebook">
-    <i class="fa fa-facebook fa-lg"></i> Přihlásit se přes účet Facebook
-  </button>
+  <!--<button (click)="signInWithFacebook()" class="button btn-social btn-facebook">-->
+  <!--<i class="fa fa-facebook fa-lg"></i> Přihlásit se přes účet Facebook-->
+  <!--</button>-->
 
   <hr>
   <form [formGroup]="signInForm" (ngSubmit)="login()">
